# sapient-machine

./: MANIFEST.in  README.md  pyproject.toml
src/machine_name/: cli.py  machina.yaml  machine.py
src/sapient_machine/: __init__.py  githf.py  machina.yaml  machine.py
