[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
[project]
name = "sapient-machine"
version = "0.0.1"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
]
description = "Machine description"
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]

keywords = ["sapient-machine"]

dependencies = [
    "electroid >= 0.0.16",
    "PyGithub >= 2.6.0",
    "PyYAML >= 6.0.1",
    "urllib3 >= 2.0.4",
    "requests >= 2.32.3",
    "click >= 8.3.0"
]

[project.scripts]
sapient-machine = "sapient_machine.cli:main"

[project.urls]
"Homepage" = "https://github.com/sapient-machine/sapient-machine"
"Bug Tracker" = "https://github.com/sapient-machine/sapient-machine/issues"